# frankenst-ai

./: .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README-pypi.md  README.md  pyproject.toml
.ado-pipelines/templates/: deploy-function-app-container.yml  deploy-webapp-container.yml  python-script.yml  run-docker-tests.yml
.github/workflows/: ci.yml  release.yml  tests.yml
research/: demo_base_agent.ipynb  demo_graphs_comunication_mpc_tools.ipynb  demo_human_in_the_loop.ipynb  demo_unstructured_adaptive_rag.ipynb  trials.ipynb
src/core_examples/components/edges/evaluators/: grade_rewrite_generate.py  route_human_node.py  route_tool_condition.py
src/core_examples/components/nodes/commands/: human_review_sensitive_tool_call.py
src/core_examples/components/nodes/enhancers/: generate_answer_ainvoke.py  retrieve_context_ai_search.py  retrieve_context_ainvoke.py  rewrite_question_ainvoke.py  simple_messages_ainvoke.py  simple_messages_invoke.py
src/core_examples/components/retrievers/ai_search_multivector_retriever/: ai_search_multivector_retriever.py
src/core_examples/components/retrievers/ai_search_simple_semantic_retriever/: ai_search_simple_semantic_retriever.py
src/core_examples/components/retrievers/langchain_chroma_multivector_retriever/: langchain_chroma_multivector_retriever.py
src/core_examples/components/runnables/multimodal_generation/: multimodal_generation.py
src/core_examples/components/runnables/multimodal_retriever/: multimodal_retriever.py
src/core_examples/components/runnables/oaklang_agent/: oaklang_agent.py
src/core_examples/components/runnables/rewrite_question/: rewrite_question.py
src/core_examples/components/runnables/structured_grade_document/: structured_grade_document.py
src/core_examples/components/tools/dominate_pokemon/: dominate_pokemon.py  dominate_pokemon_property.py  dominate_pokemon_tool.py
src/core_examples/components/tools/get_evolution/: get_evolution.py  get_evolution_property.py  get_evolution_tool.py
src/core_examples/components/tools/random_movements/: random_movements.py  random_movements_property.py  random_movements_tool.py
src/core_examples/components/tools/retriever_pokeseriex/: retriever_pokeseriex.py
src/core_examples/config/: config.yml  config_llms.yml  config_nodes.yml  settings.py
src/core_examples/config/layouts/: ai_search_adaptive_rag_config_graph.py  local_vectorstore_adaptive_rag_config_graph.py  oak_human_loop_config_graph.py  simple_oak_config_graph.py
src/core_examples/models/basetools/: langchaintoolproperty.py
src/core_examples/models/stategraph/: ragstategraph.py  stategraph.py
src/core_examples/utils/: blob_storage.py  common.py  config_loader.py  key_vault.py  logger.py
src/core_examples/utils/ollama/: ollama_wsl_proxy.py
src/core_examples/utils/rag/: ai_search_unstructured_indexer.py  langchain_unstructured_indexer.py  local_chroma.py  processing.py
src/core_examples/utils/rag/ai_search_schemas/: loader.py
src/frankstate/: __init__.py  workflow_builder.py
src/frankstate/entity/: edge.py  graph_layout.py  node.py  runnable_builder.py  statehandler.py
src/frankstate/managers/: edge_manager.py  node_manager.py
src/services/foundry/: llms.py
src/services/functions/: Dockerfile
src/services/functions/get_evolution_mcptool/: function.py  properties.py
src/services/functions/indexer_pokeseriex_eventgrid/: function.py  orchestrator.py
src/services/functions/retriever_pokeseriex_mcptool/: function.py  orchestrator.py  properties.py
src/services/mcp/: server_oaklang_agent.py
tests/integration_test/: test_wheel_contents.py
tests/support/: core_doubles.py
tests/support/frankstate_doubles/: builders.py  layouts.py  stub.py
tests/unit_test/: test_ai_search_index_manager.py  test_core_settings.py  test_llm_services.py  test_oaklang_agent.py  test_output_paths.py  test_simple_oak_config_graph.py
tests/unit_test/frankstate/: test_edge_manager.py  test_graph_layout.py  test_node_manager.py  test_retriever_mixin.py  test_runnable_builder.py  test_statehandler.py  test_workflow_builder_integration.py
