[build-system]
requires = ["setuptools>=78.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frankstate"
version = "0.2.1"
description = "Frank brings order and helps you build complex LLM workflows using scalable, testable, and reusable components."
license = "MIT"
readme = { file = "README-pypi.md", content-type = "text/markdown" }
requires-python = ">=3.12.3"
dependencies = [
    "langchain-core>=1.4,<1.5",
    "langgraph>=1.2,<1.4",
    "pydantic>=2.13,<2.14",
]
authors = [
    { name = "aamaragones", email = "aangel.maragones@outlook.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent"
]
keywords = ["LLM", "azure", "langgraph", "langchain", "azure-foundry", "unstructured", "multimodal"]

[project.optional-dependencies]
examples = [
    "langchain",
    "PyYAML",
    "pydantic-settings",
    "requests",
    "azure-functions",
    "azure-keyvault-secrets",
    "azure-identity",
    "azure-search-documents",
    "azure-storage-blob",
    "langchain-azure-ai[opentelemetry]",
    "langchain-ollama",
    "langchain-chroma",
    "langchain-classic",
    "langchain-mcp-adapters",
    "fastmcp",
    "Pillow",
    "tenacity",
    "unstructured[pdf]",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
]

[project.urls]
homepage = "https://github.com/aamaragones/frankenst-ai"
changelog = "https://github.com/aamaragones/frankenst-ai/blob/main/CHANGELOG.md"
issues = "https://github.com/aamaragones/frankenst-ai/issues"
repository = "https://github.com/aamaragones/frankenst-ai"

[dependency-groups]
lint = [
    "mypy==2.1.0",
    "ruff==0.15.13",
    "pre-commit==4.4.0",
    "types-PyYAML==6.0.12.20260518",
]
test = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    "build==1.4.2",
    "twine==6.2.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["frankstate", "frankstate.*"]
namespaces = false
# The published core wheel intentionally contains only `frankstate`.
# `core_examples` remains the documented reference package of this repository.

[tool.setuptools.package-data]
# Ship the PEP 561 marker so consumers pick up `frankstate` inline types.
frankstate = ["py.typed"]

[tool.ruff]
line-length = 88
indent-width = 4
extend-include = ["*.ipynb"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "D"]
ignore = ["E501", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Docstring convention (D) is enforced only on the published `frankstate` slice.
# The example, service and notebook trees stay fully linted for everything else.
"tests/**" = ["D"]
"src/core_examples/**" = ["D"]
"src/services/**" = ["D"]
"research/**" = ["D"]

[tool.mypy]
python_version = "3.12"
files = ["src/frankstate", "tests/support/frankstate_doubles"]
strict = true
explicit_package_bases = true
mypy_path = ["src"]
warn_no_return = false
warn_unused_ignores = true
warn_redundant_casts = true
allow_redefinition = true

[[tool.mypy.overrides]]
module = ["IPython", "IPython.*", "mypy-yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/unit_test", "tests/integration_test"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = "-ra"
# `tests/unit_test/frankstate` contains the Frankstate patterns suite.
# `tests/unit_test/core_examples` contains example/reference tests for layouts and
# runnable builders built on top of the Frankenst-AI patterns.
# `tests/integration_test` contains smoke coverage for compiled workflows and
# packaging-adjacent execution flows that should run in the default suite.
markers = [
    "unit: fast Frankenst-AI contract tests",
    "integration: compiled workflows and external services (e.g., FastAPI , Microsoft Foundry)",
]

[tool.coverage.run]
source = ["src/frankstate"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90